--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Desert</title>
 </head>
 <body>
@@ -13,14 +13,14 @@
                     <img src="./assets/images/logo.png" alt ="logo">
                     <h1>Déserts du monde</h1>
         </div>
-        <nav role="navigation" aria-label="Menu principal">
+        <nav  aria-label="Menu principal">
             <input type="checkbox" name="main-nav" id="main-nav" class="burger-check">
             <label for="main-nav" class="burger menu"><span></span></label>
           
             <ul> 
-                <a href="#"><li>-ACTUALITE-</li></a>
-                <a href="#"><li>-GALERIE-</li></a>
-                <a href="#"><li>-CONTACT-</li></a>
+                <li><a href="#">-ACTUALITE-</a></li>
+                <li><a href="#">-GALERIE-</a></li>
+                <li><a href="#">-CONTACT-</a></li>
             
             </ul>
         </nav>
@@ -74,6 +74,11 @@
     </main>
     <footer>
         <p>© 2014 Les deserts du monde</p>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="CSS Valide !" >
+                </a>
+            </p>
     </footer>
 </body>
 </html>
